# kubernetes-manifests

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml
.mise/: zed_ax_runtime.swift  zed_cg_runtime.swift
.mise/tasks/: package  test
.mise/tasks/check/: _default  clippy  fmt  nextest  queries  test  wasm
.mise/tasks/fix/: fmt
.mise/tasks/lint/: _default  swift
.mise/tasks/rust/: bootstrap
.mise/tasks/tools/install/: ts-query-ls  zed-extension
.mise/tasks/zed/: embedded  install-built-extension  install-dev-extension  install-next-extension  install-nightly  invalid  multi-document  next  open  plain  prepare-next-dev-source  prepare-profile  refresh-runtime  repo  seed-profile  sync-extension  template
.mise/tasks/zed/ax/: buttons  ensure-window  front-window  key-code  keystroke  menu-bar-items  menu-item  names  new-window  type  (+2 more)
fixtures/chart/: Chart.yaml  values.yaml
fixtures/chart/templates/: deployment.tpl  helpers.tpl
fixtures/embedded/: example.md
fixtures/invalid/: invalid-service.k8s.yaml  plain-missing-kind.yaml  plain-non-kubernetes.yaml
fixtures/valid/: deployment.k8s.yaml  deployment.kyaml  multi-document.k8s.yaml  plain-deployment.yaml  plain-kind-first.yaml  plain-multi-document.yaml  plain-with-comment.yaml  plain.yaml  pod-with-commands.k8s.yaml  secret.k8s.yaml  secret.kyaml
icon_themes/: kubernetes.json
languages/helm/: config.toml  highlights.scm  injections.scm  outline.scm
languages/kubernetes/: config.toml  highlights.scm  injections.scm  outline.scm  redactions.scm  textobjects.scm
snippets/: kubernetes.json
src/: context_server.rs  docs.rs  helm_language_server.rs  kubernetes.rs  language_server.rs  settings.rs  templates.rs  util.rs
src/settings/: mod.rs  schema.rs
(+8 files in other folders)
