[package]
name = "kubernetes"
version = "0.3.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/kubernetes.rs"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
zed_extension_api = { git = "https://github.com/zed-industries/zed", rev = "07cfa81f09520c691715c40acff84994a55acaf3", package = "zed_extension_api" }

[dev-dependencies]
regex = "1.12"
serde_yml = "0.0"
toml = "1.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
absolute_paths = "deny"
