[package]
name = "kubernetes"
version = "0.10.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
path = "src/kubernetes.rs"
crate-type = ["cdylib"]

[features]
default = []
next = ["dep:zed_extension_api_next"]

[dependencies]
serde_json = "1.0.149"
url = "2.5.8"
zed_extension_api_next = { git = "https://github.com/zed-industries/zed", rev = "07cfa81f09520c691715c40acff84994a55acaf3", package = "zed_extension_api", optional = true }
zed_extension_api_stable = { version = "0.7.0", package = "zed_extension_api" }

[dev-dependencies]
regex = "1.12.3"
serde_yml = "0.0.12"
toml = "1.0.6"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
absolute_paths = "deny"
